--- a/customize.dist/src/less2/include/support.less
+++ b/customize.dist/src/less2/include/support.less
@@ -54,7 +54,7 @@
     .cp-support-recorded {
         white-space: nowrap;
         .cp-support-recorded-insert {
-            margin-right: @sidebar_base-margin
+            margin-right: @sidebar_base-margin;
         }
     }
     @ticket-padding: 10px;
