Hide empty tables

--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -189,8 +189,10 @@
                                 margin-right: @sidebar_base-margin;
                             }
                         }
-                        tr:nth-child(odd) {
-                            background-color: @cp_sidebar-left-item-bg;
+                        tbody {
+                            tr:nth-child(odd) {
+                                background-color: @cp_sidebar-left-item-bg;
+                            }
                         }
                     }
                     .cp-sidebar-input-block {
