--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -75,5 +75,9 @@
             }
         }
     }
+    .cp-limit-key {
+        padding: @sidebar_base-margin 0;
+        cursor: pointer;
+    }
 }
 
