Split support setup and support team management in admin page

--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -79,5 +79,11 @@
         padding: @sidebar_base-margin 0;
         cursor: pointer;
     }
+
+    .cp-admin-support-state {
+        i {
+            margin-right: @sidebar_base-margin;
+        }
+    }
 }
 
