--- a/customize.dist/src/less2/include/forms.less
+++ b/customize.dist/src/less2/include/forms.less
@@ -130,11 +130,14 @@
         text-align: center;
         text-transform: uppercase;
         font-size: 14px;
-        font-family: inherit;
         text-decoration: none;
         cursor: pointer;
         border-radius: @variables_radius;
         transition: none;
+
+        &:not(.fa):not(.cptools) {
+            font-family: inherit;
+        }
 
         i, .fa, .cptools {
             &:not(.nomargin) {
