Add missing file menu in File app

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -1078,6 +1078,7 @@
         .cp-toolbar-bottom-mid {
             display: flex;
             order: 2;
+            margin: auto;
             button {
                 margin-right: 5px;
             }
