feat(drive): make the new file button more prominent

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -953,11 +953,11 @@
             @drive-light: lighten(@cryptpad_color_brand, 30%);
             .cp-app-drive-toolbar-new {
                 border-radius: @variables_radius;
-                color: @cryptpad_color_grey_900;
-                border-color: @drive-light;
-                background-color: @drive-light;
+                color: @cryptpad_color_white;
+                border-color: @cryptpad_color_brand;
+                background-color: @cryptpad_color_brand;
                 &:hover {
-                    background-color: fade(@drive-light, 80%);
+                    background-color: fade(@cryptpad_color_brand, 90%);
                 }
             }
         }
