feat(drive): clean up dropdown and list view

--- a/customize.dist/src/less2/include/colortheme.less
+++ b/customize.dist/src/less2/include/colortheme.less
@@ -54,7 +54,7 @@
 @cryptpad_color_grey_950: #121212;
 @cryptpad_color_black: #000;
 
-@cryptpad_text_col:@cryptpad_color_grey_800;
+@cryptpad_text_col:@cryptpad_color_black;
 @cryptpad_text_col_inv: @cryptpad_color_grey_50;
 
 @cryptpad_ui_shadow: 0px 0px 5px 1px #00000030;
