--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -757,7 +757,7 @@
                             text-align: left;
                         }
                         &.sortasc, &.sortdesc {
-                            margin-right: 3px;
+                            margin-left: .24rem;
                         }
                     }
                     &> span {
