--- a/customize.dist/src/less2/include/dropdown.less
+++ b/customize.dist/src/less2/include/dropdown.less
@@ -89,7 +89,7 @@
             min-width: 250px;
             padding: 5px;
             border-radius: @variables_radius;
-            box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
+            box-shadow: 0px 8px 5px -5px #0002, 0 1px 0 #0001;
             z-index: 1000; //Z dropdown content
             max-height: 300px;
             overflow-y: auto;
