feat(ui): use inter font

--- a/customize.dist/src/less2/include/font.less
+++ b/customize.dist/src/less2/include/font.less
@@ -21,5 +21,5 @@
     src: url("/customize/fonts/cryptpadtools.ttf");
 }
 
-@import (once) '/customize/fonts/open-sans.less';
+@import (once) '/customize/fonts/Inter/inter.css';
 
