--- a/customize.dist/src/less2/include/colortheme.less
+++ b/customize.dist/src/less2/include/colortheme.less
@@ -4,7 +4,8 @@
  * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 
-@colortheme_font: 'Inter', 'Open Sans', 'Helvetica Neue', sans-serif;
+
+@colortheme_font: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 @colortheme_app-font-size: .85rem;
 @colortheme_app-font-size-small: .6rem;
 @colortheme_app-font: @colortheme_app-font-size @colortheme_font;
