`add item` buttons are keyboard accessible

--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -420,6 +420,9 @@
                 .fa {
                     margin-right: 5px;
                 }
+                &:focus{
+                    outline: @cryptpad_color_brand solid 2px;
+                }
             }
         }
     }
