--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -11,28 +11,30 @@
 @import (reference) '../../customize/src/less2/include/export.less';
 
 .cp-app-drive-element-grid {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    .leftside-menu-category_main();
-    margin: 0;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    margin-left: -5px;
-    padding-left: 5px;
-    .fa, .cptools {
-        display: inline-block;
-        min-width: 0;
-        width: 20px;
-        margin-right: 0px;
-        z-index: 99;
-    }
-    .cp-app-drive-element {
-        flex: 1;
-        min-width: 0;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
+    // overflow: hidden;
+    // text-overflow: ellipsis;
+    // .leftside-menu-category_main();
+    // // margin: 0;
+    // display: flex;
+    // height: 70px !important;
+    // align-items: center;
+    // cursor: pointer;
+    // margin: 5px;
+    // margin-left: -5px;
+    // padding-left: 5px;
+    // .fa, .cptools {
+    //     display: inline-block;
+    //     min-width: 0;
+    //     width: 20px;
+    //     margin-right: 0px;
+    //     z-index: 99;
+    // }
+    // .cp-app-drive-element {
+    //     flex: 1;
+    //     min-width: 0;
+    //     overflow: hidden;
+    //     text-overflow: ellipsis;
+    // }
 }
 
 .active-app {
