--- a/www/install/configscreen.css
+++ b/www/install/configscreen.css
@@ -1,3 +1,111 @@
+
+
+.configscreen {
+
+    width: 70%; 
+    height: 75%;
+    background-color: #212121!important;
+
+}
+
+.cp-onboardscreen-name {
+
+    width:75%; 
+    float:right; 
+    padding:10px
+
+}
+
+.cp-onboardscreen-logo {
+
+    width:20%; 
+    height:30%;
+    float:left
+
+}
+
+
+.cp-onboardscreen-description {
+
+    width:75%; 
+    min-height:10000px;
+    float:right;padding:10px
+
+}
+
+.cp-onboardscreen-screentitle {
+
+    margin:auto;
+    padding:10px;
+    text-align:center;
+
+}
+
+.configscreen {
+
+    width: 70%; 
+    height: 75%; 
+    background-color: #424242 !important;
+
+}
+
+.cp-form-setting-title {
+
+    float:center;
+    padding:10px;
+    color: #fff;
+
+}
+
+.cp-onboardscreen-maintitle {
+
+    float:center;
+    padding:10px;  
+
+
+}
+
+
+.cp-onboardscreen-form {
+
+    padding:10px;   
+
+}
+
+.cp-onboardscreen-title {
+
+    font-family: "IBM Plex Mono";
+    font-weight: 500;
+
+}
+
+.cp-admin-customize-apps-grid {
+
+    width: 40%;
+    color: blue;
+    height: 10px !important;
+
+
+}
+
+.cp-app-drive-element-grid {
+
+    /* .leftside-menu-category_main(); */
+    /* float:left; */
+    /* display: flex; */
+    /* height: 70px !important; */
+    /* align-items: center; */
+
+    /* cursor: pointer;
+    margin: 5px;
+    border-color: white !important;
+    width: 50% !important; */
+
+    display: inline-block !important;
+    /* height: 40% !important */
+
+}
+
 .configscreen {
 
 background: red
