--- a/customize.dist/src/less2/include/forms.less
+++ b/customize.dist/src/less2/include/forms.less
@@ -122,7 +122,6 @@
     button.btn {
         background-color: @cp_buttons-cancel;
         box-sizing: border-box;
-        outline: 0;
         align-items: center;
         padding: 0 6px;
         line-height: 36px;
@@ -232,11 +231,9 @@
         }
 
 
-
+        outline: none;
         &:focus {
-            //border: 1px dotted @alertify-base;
-            box-shadow: 0px 0px 5px @cp_buttons-primary !important;
-            outline: none;
+            outline: @cryptpad_color_brand solid 2px;
         }
         &::-moz-focus-inner {
             border: 0;
