add focus style for inputs inside modals #1506

--- a/customize.dist/src/less2/include/alertify.less
+++ b/customize.dist/src/less2/include/alertify.less
@@ -263,6 +263,10 @@
 
             input {
                 .tools_placeholder-color();
+                outline: none;
+                &:focus-visible {
+                    outline: @cryptpad_color_brand solid 2px;
+                }
             }
 
             span.cp-password-container {
