--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -152,12 +152,16 @@
             line-height: 30px;
             color: @cp_kanban-fg;
             border: 1px solid fade(@cp_kanban-fg, 40%);
+            outline: none;
             // tick on selected color
             &.cp-kanban-palette-card.fa-check {
                 color: @cryptpad_text_col;
             }
             &.cp-kanban-palette-board.fa-check {
                 color: @cryptpad_text_col_inv;
+            }
+            &:focus{
+                outline: @cryptpad_color_brand solid 2px;
             }
         }
     }
