add focus style for checkmarks + Add/Share modals elements #1506

--- a/customize.dist/src/less2/include/alertify.less
+++ b/customize.dist/src/less2/include/alertify.less
@@ -198,6 +198,12 @@
                         text-decoration: none;
                     }
                 }
+                .cp-usergrid-user, textarea  {
+                    outline: none;
+                    &:focus {
+                        outline: @cryptpad_color_brand solid 2px;
+                    }
+                }
             }
             .cp-alertify-type-container {
                 overflow: visible !important;
@@ -236,6 +242,10 @@
                                     display: none;
                                 }
                             }
+                        }
+                        outline: none;
+                        &:focus {
+                            outline: @cryptpad_color_brand solid 2px;
                         }
                     }
                     span.alertify-tabs-active {
