--- a/customize.dist/src/less2/include/checkmark.less
+++ b/customize.dist/src/less2/include/checkmark.less
@@ -128,9 +128,9 @@
                 position: absolute;
                 box-sizing: border-box;
             }
+            outline: none;
             &:focus {
-                box-shadow: 0px 0px 5px @cp_checkmark-back1;
-                outline: none;
+                outline: @cryptpad_color_brand solid 2px;
             }
         }
 
@@ -216,9 +216,9 @@
                 height: @checkmark-dim1;
                 height: var(--checkmark-dim1);
             }
+            outline: none;
             &:focus {
-                box-shadow: 0px 0px 5px @cp_checkmark-back1;
-                outline: none;
+                outline: @cryptpad_color_brand solid 2px;
             }
         }
 
