Add spacing between radio/checkbox items
This makes the checkboxes much easier to read on mobile.

Fixes #1507.

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -977,6 +977,8 @@
         display: flex;
         flex-flow: column;
         align-items: baseline;
+        row-gap: 2ch;
+        margin: 2ch 0;
         .cp-radio, .cp-checkmark {
             display: inline-flex;
             max-width: 100%;
