--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -10,31 +10,57 @@
 @import (reference) '../../customize/src/less2/include/framework.less';
 @import (reference) '../../customize/src/less2/include/export.less';
 
-.cp-app-drive-element-grid {
-    // overflow: hidden;
-    // text-overflow: ellipsis;
-    // .leftside-menu-category_main();
-    // // margin: 0;
-    // display: flex;
-    // height: 70px !important;
-    // align-items: center;
-    // cursor: pointer;
-    // margin: 5px;
-    // margin-left: -5px;
-    // padding-left: 5px;
-    // .fa, .cptools {
-    //     display: inline-block;
-    //     min-width: 0;
-    //     width: 20px;
-    //     margin-right: 0px;
-    //     z-index: 99;
-    // }
-    // .cp-app-drive-element {
-    //     flex: 1;
-    //     min-width: 0;
-    //     overflow: hidden;
-    //     text-overflow: ellipsis;
-    // }
+.cp-admin-customize-apps-grid {
+    padding: 10px;
+    margin-left: 10px;
+    width: 105%;
+}
+
+.cp-appblock {
+    width:30%;
+    float:left !important;
+    display:block !important;
+    margin: 2px !important;
+    height: 60px !important;
+    padding: 10px;
+}
+
+.active-app {
+    background-color: #323232!important;
+    max-width:30%;
+}
+
+.inactive-app {
+    background-color: #424242!important;
+    max-width:30%;
+}
+
+.cp-onboardscreen-colorpick {
+    padding-left:5%
+}
+
+.cp-onboardscreen-color {
+    width:200%;
+    height:20%;
+    margin-left: -65%;
+    margin-bottom: -10%;
+}
+
+.cp-kanban-palette {
+    display: inline-block;
+    border-radius: 50%;
+    height: 30px !important;
+    width: 30px !important;
+    text-align: center;
+    line-height: 30px;
+    background-color: green !important;
+    border: 1px solid fade(green, 40%);
+    margin-right: 1%;
+}
+
+.cp-onboardscreen-checkmark {
+    text-align:right !important;
+    color: white !important;
 }
 
 
