change focus order on board elements

--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -658,6 +658,9 @@
             &:hover {
                 background-color: @cp_kanban-add-hover;
             }
+            &:focus {
+                outline: @cryptpad_color_brand solid 2px;
+            }
         }
 
         .kanban-header-yellow {
